--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Mamahjong</title>
-    <script type="text/javascript" href="js/jquery.js"></script>
-    <script type="text/javascript" href="js/jquery.js"></script>
+    <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="js/game.js"></script>
     <link rel="stylesheet" href="css/main.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <div class="header">
@@ -14,7 +15,9 @@
       </p>
     </div>
     <div class="board">
-
+      <img class="tile" src="img/test-tile.svg"/>
+      <img class="tile" src="img/test-tile.svg" style="left: 100px"/>
+      <img class="tile" src="img/test-tile.svg" style="left: 200px"/>
     </div>
   </body>
 </html>
