Add new game button and visual improvements

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       </p>
     </div>
     <div class="board">
+      <div class="newGame">
+        New Game
+      </div>
     </div>
   </body>
 </html>
