Add basic menu placeholder

--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
   </head>
   <body>
     <div class="header">
-      <p>
-        Options
-      </p>
+      <p class="title">Mamahjong</p>
+      <p class="open-menu">Menu</p>
+      <p class="newGame">New Game</p>
     </div>
     <div class="board">
-      <div class="newGame">
-        New Game
+      <div class="menu">
+        <h1>Menu</h1>
       </div>
+      <div class="curtain"></div>
     </div>
   </body>
 </html>
