Add basic menu placeholder options

--- a/index.html
+++ b/index.html
@@ -18,6 +18,32 @@
     <div class="board">
       <div class="menu">
         <h1>Menu</h1>
+        <table>
+          <tr>
+            <td>Language</td>
+            <td>English</td>
+          </tr>
+          <tr>
+            <td>Tileset</td>
+            <td>Classic</td>
+          </tr>
+          <tr>
+            <td>Layout</td>
+            <td>Turtle</td>
+          </tr>
+          <tr>
+            <td>Highlight removable tiles</td>
+            <td>Off</td>
+          </tr>
+          <tr>
+            <td>No valid turns notification</td>
+            <td>On</td>
+          </tr>
+          <tr>
+            <td>Timer</td>
+            <td>Off</td>
+          </tr>
+        </table>
       </div>
       <div class="curtain"></div>
     </div>
