Add procedural options

--- a/index.html
+++ b/index.html
@@ -22,35 +22,27 @@
         <table>
           <tr>
             <td><p>Language</p></td>
-            <td><select class="menu-input" name="language">
-              <option value="english">English</option>
-              <option value="german">Deutsch</option>
-            </select></td>
+            <td><select class="menu-input" name="language"></select></td>
           </tr>
           <tr>
             <td><p>Tileset</p></td>
-            <td><select class="menu-input" name="tileset">
-              <option value="classic">Classic</option>
-              <option value="helldivers">Helldivers</option>
-            </select></td>
+            <td><select class="menu-input" name="tileset"></select></td>
           </tr>
           <tr>
             <td><p>Layout</p></td>
-            <td><select class="menu-input" name="layout">
-              <option value="turtle">Turtle</option>
-            </select></td>
+            <td><select class="menu-input" name="layout"></select></td>
           </tr>
           <tr>
             <td><p>Highlight removable tiles</p></td>
-            <td><input class="menu-input" type="checkbox" name="highlight" value="false"></td>
+            <td><input class="menu-input" type="checkbox" name="highlightFree" value="false"></td>
           </tr>
           <tr>
             <td><p>No valid turns notification</p></td>
-            <td><input class="menu-input" type="checkbox" name="validTurnDetection" value="true"></td>
+            <td><input class="menu-input" type="checkbox" name="informLoss" value="true"></td>
           </tr>
           <tr>
             <td><p>Timer</p></td>
-            <td><input class="menu-input" type="checkbox" name="timerEnabled" value="false"></td>
+            <td><input class="menu-input" type="checkbox" name="showTimer" value="false"></td>
           </tr>
         </table>
       </div>
