Various additions and fixes

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <body>
     <div class="header">
       <p class="title">Mamahjong</p>
-      <p class="open-menu" id="button_menu">Menu</p>
-      <p class="newGame" id="button_new_game">New Game</p>
+      <p class="open-menu button" id="button_menu">Menu</p>
+      <p class="newGame button" id="button_new_game">New Game</p>
     </div>
     <div class="board">
       <div class="menu">
